bundled_metadata/force-app/main/default/objects/AFH_PersonBasedPermissionSet__mdt/AFH_PersonBasedPermissionSet__mdt.object-meta.xml
<CustomObject>
    <label>AFH PersonBasedPermissionSet</label>
    <pluralLabel>AFH PersonBasedPermissionSets</pluralLabel>
</CustomObject>