bundled_metadata/force-app/main/default/objects/AFH_PersonBasedPermissionSet__mdt/fields/AFH_Persona__c.field-meta.xml
<CustomField>
    <fullName>AFH_Persona__c</fullName>
    <description>Stores the persona value used to determine the appropriate permission set for a user.</description>
    <label>AFH Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFH Customer</fullName>
                <default>true</default>
                <label>AFH Customer</label>
            </value>
            <value>
                <fullName>AFH Content Editor</fullName>
            </value>
            <value>
                <fullName>AFH Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>