bundled_metadata/force-app/main/default/objects/AFH_PersonBasedPermissionSet__mdt/fields/AFH_Profile__c.field-meta.xml
<CustomField>
    <fullName>AFH_Profile__c</fullName>
    <description>Stores the Salesforce profile name associated with the persona for permission mapping.</description>
    <label>AFH Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>