bundled_metadata/force-app/main/default/objects/AFH_PersonBasedPermissionSet__mdt/fields/AFH_PSGName__c.field-meta.xml
<CustomField>
    <fullName>AFH_PSGName__c</fullName>
    <description>Stores the permission set group (PSG) name assigned to the persona or profile.</description>
    <label>AFH PSGName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>